# freedroidRPG

./: .gitignore  .gitlab-ci.yml  .mailmap  CONTRIBUTING.md  COPYING  ChangeLog  FILES  INSTALL.freedroidRPG  Makefile.am  NEWS  README  README-cs  README-de  README-es  README-fr  README-hu  README-it  README-pt_BR  README-ru  README-sv  README.md  configure.ac  freedroidRPG.6  include.mk
.tx/: config
data/base/: droid_specs.lua  game_config.lua  item_specs.lua  languages.lua  npc_specs.lua  skill_specs.lua
data/base/dialogs/: AfterTakeover.lua
data/base/titles/: Credits.lua
data/base/titles/cs/: Contribute.lua  Controls.lua  Credits.lua  GameLost.lua  StartOfGame.lua  TakeoverInstructions.lua
data/base/titles/de/: Contribute.lua  Controls.lua  Credits.lua
data/base/titles/es/: Contribute.lua  Controls.lua  Credits.lua  EndOfGame.lua  GameLost.lua
data/base/titles/fr/: Contribute.lua  Controls.lua  Credits.lua  StartOfGame.lua  level_editor_help.lua
data/base/titles/hu/: Contribute.lua  Controls.lua  Credits.lua  level_editor_help.lua
data/base/titles/it/: Contribute.lua  Controls.lua  Credits.lua  level_editor_help.lua
data/base/titles/pt_BR/: Contribute.lua  Controls.lua  Credits.lua  GameLost.lua  TakeoverInstructions.lua
data/base/titles/ru/: Contribute.lua  Controls.lua  Credits.lua  level_editor_help.lua
data/base/titles/sv/: Contribute.lua  Controls.lua  Credits.lua
data/graphics/droids/prologue/: atlas.txt
data/storyline/: events_dat.footer  events_dat.header  extract_droids.awk  extract_events.awk  extract_levels.awk  extract_quests.awk  quests_dat.header  split_acts.sh
data/storyline/act1/: ReturnOfTux.droids  npc_specs.lua  quests.lua
data/storyline/act1/dialogs/: 24-Controllable-Bot.lua  Act2-Colemak.lua  Act2-Fred.lua  Act2-TerminalColemak.lua  Act2-TerminalDenied.lua  Act2-Yadda.lua  Act2FactoryTerminal.lua  Act2GateKeeper.lua  Act2ProgrammingChief.lua  Act2RRGateTerminal.lua  Act2SecurityChief.lua  Bender.lua  Benjamin.lua  Butch.lua  CerebrumPortalGuardian.lua  Chandra.lua  DSB-PowerControl.lua  DSB-PowerControlGate1.lua  Dixon.lua  Erin.lua  Ewald.lua  Francis.lua  Guy.lua  HF-EntranceBot.lua  HF-FirmwareUpdateServer.lua  Iris.lua  Jennifer.lua  Jim.lua  Lukas.lua  MO-HFGateAccessServer.lua  Mike.lua  Richard.lua  Samson.lua  Saul.lua  Singularity.lua  Spencer.lua  Tania.lua  TutorialTom.lua  c-net-nethack_sub.lua  c-net.lua
data/storyline/act1/titles/: EndOfAct1.lua
data/storyline/act1/titles/cs/: EndOfAct.lua
data/storyline/act2/: quests.lua
data/storyline/act2/dialogs/: Colemak.lua  FactoryTerminal.lua  Fred.lua  Friend.lua  IcePass-Terminal.lua  Mike.lua  MrSaves.lua  ProgrammingChief.lua  Prologue.lua  RRF-ManagmentTerminal.lua  SecurityChief.lua  TerminalColemak.lua  Yadda.lua
dialogs/: 614_portal.lua  Act2-TerminalDenied.lua  Act2GateKeeper.lua  Act2ProgrammingChief.lua  Act2SecurityChief.lua  Bob.lua  CerebrumPortalGuardian.lua  HF-FirmwareUpdateServer.lua  Iris.lua  Jim.lua  Kevin.dialog  Spencer.dialog  Spencer.lua
doc/: Doxyfile.in  Makefile.am  extra.css  header.html
doc/manual/: Doxyfile.in  dialog.md  header.html  wikiheader.md
doc/tools/: Doxyfile.in  cmdlineref.md  fddnm.md  header.html  playcheat.md
doc/tools/dot_file_sources/: example_error.dot  example_extra.dot
doc/wiki/scripts/: README.WIKIPARSE  modWPCommon.lua  modWP_Dialog.lua  modWP_Droid.lua  modWP_Levels.lua  modWP_NPC.lua  modWP_Quests.lua  modWP_ROTD.lua
lua_modules/: FDdialog.lua  FDnpc_lfuns.lua  FDutils.lua  script_helpers.lua
m4/: acx_pthread.m4  ax_check_gl.m4  clang.m4  sdl.m4
macosx/: Info.plist.in  make_dmg_step1  make_dmg_step2  pkgApp.pl
map/: ReturnOfTux.droids  npc_specs.lua  script_helpers.lua
pkgs/freedesktop/: Makefile.am  freedroidrpg.appdata.xml  org.freedroid.freedroidRPG.appdata.xml
po/: Makefile.am  tx-credentials  update-potfiles  xgettext-wrapper
po/l10n-others/: Makefile.am  Makevars.in
po/po-data/: LINGUAS  Makevars.in  POTFILES.in  Rules-others  cs.po  de.po  es.po  fr.po  freedroidrpg-data.pot  hu.po  it.po  pt_BR.po  ru.po  sv.po
po/po-dialogs/: Makevars.in  POTFILES.in  Rules-others  cs.po  de.po  es.po  fr.po  freedroidrpg-dialogs.pot  hu.po  it.po  pt_BR.po  ru.po  sv.po
po/po-src/: Makevars.in  POTFILES.in  Rules-others  cs.po  de.po  es.po  fr.po  freedroidrpg.pot  hu.po  it.po  pt_BR.po  ru.po  sv.po
src/: BFont.c  BFont.h  Makefile.am  action.c  addon_crafting_ui.c  animate.c  armor.c  automap.c  benchmark.c  blocks.c  bullet.c  character.c  chat.c  colldet.c  defs.h  dynarray.c  enemy.c  event.c  faction.c  font.c  game_act.c  game_ui.c  gen_savestruct.py  global.h  graphics.c  hud.c  image.c  influ.c  init.c  input.c  item_upgrades.c  item_upgrades_ui.c  items.c  keyboard.c  lang.c  light.c  lua.c  luaconfig.c  main.c  map.c  (+30 more)
src/lua/: config_loader.c  game_scripting.c  lua_core.c  lua_core.h  lua_restricted.c
src/lua/bindings/: luaFD_bindings.h  luaFD_tux.c
src/lvledit/: lvledit.c  lvledit.h  lvledit_actions.c  lvledit_beautify_actions.c  lvledit_display.c  lvledit_enemy.c  lvledit_input.c  lvledit_map.c  lvledit_menu.c  lvledit_object_lists.c  lvledit_object_lists.h  lvledit_tool_move.c  lvledit_tool_place.c  lvledit_tool_select.c  lvledit_tools.h  lvledit_validator.c  lvledit_widget_categoryselect.c  lvledit_widget_map.c  lvledit_widget_map.h  lvledit_widget_minimap.c  lvledit_widget_minimap.h  lvledit_widget_toolbar.c  lvledit_widget_toolbar.h  lvledit_widgets.c
src/mapgen/: gram_simple.c  mapgen.c  mapgen.h
src/savegame/: convert.c  filters_0_16_1.c
src/widgets/: widget_autoscroll_text.c  widget_background.c  widget_button.c  widget_group.c  widget_text.c  widget_text_list.c  widget_text_list.h  widgets.c  widgets.h
tools/atlas/: make_atlas.c
tools/fddnm/: INSTALL.fddnm  README.fddnm  dialog_dot.h  dialog_dot_struct.h  dialog_file.h  dialog_node.h  dialog_regex.h  fddnm.cpp  fddnm_dot_data.h
tools/font/: codeset.c  make_bmchars.c
tools/image/: croppy.c
win32/: freedroidRPG.nsi.in  howto_ico_gimp.txt  install_file_lists.py  pkgApp.pl
(+8 files in other folders)
